src/objects/DSCORGPKG__Triggered_Append_Clean__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Matching_Method_Chosen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Method Chosen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SObject_Type__c</fullName>
        <label>SObject Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Search_Filter_JSON__c</fullName>
        <label>Search Filter JSON</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Where_Condition__c</fullName>
        <label>Where Condition</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEnabled?</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggered Append &amp; Clean</label>
    <nameField>
        <displayFormat>TAC-{000000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triggered Append &amp; Clean</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>